[b][color=orange]v4.05[/color], 27.12.2018[/b][list]
[*]Various skin adjustments & fixes.
[*]Use a nice glow around RaidBuffReminder & Buff Reminder.
[*]Update Minimap Coords Position.
[*]Removed my ShadowOverlay.
[*]Added a CombatFeedBack Text to the UF's.[/list]

[b][color=orange]v4.04[/color], 13.12.2018[/b][list]
[*]Fixed an error in the LFGList skin.
[*]Updated SpellBook skin.
[*]Use my arrows on the StackSplitFrame again.
[*]Disable my ShadowOverlay by default for now.[/list]

[b][color=orange]v4.03[/color], 11.12.2018[/b][list]
[*]Update new ChatBar position and size.
[*]Removed Enhanced FriendsList. Get ProjectAzilroka.
[*]Fix Keystone Info tooltip.
[*]Added iLvL on ScrappingMachine & EquipFlyout Buttons.
[*]Added Buff Reminder Module.[/list]

[b][color=orange]v4.02[/color], 21.11.2018[/b][list]
[*]Fixed an error in one of my ClassColor function. #38
[*]Fixed an error with DeJaCharacterStats. #39[/list]

[b][color=orange]v4.01[/color], 20.11.2018[/b][list]
[*]Small DPS/Tank Layout adjustments.
[*]Take account to the new ElvUI functions. (aborb etc.)
[*]Added new Hearthstone spells to the LocPanel.
[*]Updated the Undress Button on the CharacterFrame.
[*]Added a ChatBar with quick buttons.
[*]Added a Quest Notifier.
[*]A lot of skin updates.[/list]

[b][color=orange]v4.00[/color], 05.10.2018[/b][list]
[*]New Layout for DPS/Tank Profile.
[*]Updated BigWigs/Details/Masque Profile.
[*]Updated my buttonColector to be like SMB.
[*]Added mouseover options for EquipBar & SpecBar.
[*]A lot skin updates.[/list]

[b][color=orange]v3.41.1[/color], 18.09.2018[/b][list]
[*]Fix a nil error on the NamePlate Auras.[/list]

[b][color=orange]v3.41[/color], 18.09.2018[/b][list]
[*]Added a check for the ScrappingMachine if the ElvUI bags are disabled.
[*]Adjust a bit the ArenaFrame position.
[*]Maybe a fix for a nil error on vignetteInfo.
[*]More NPCs on my GameMenu. ;)
[*]A lot skin updates.[/list]

[b][color=orange]v3.40[/color], 14.09.2018[/b][list]