@@ -1,3 +1,12 @@
+[b][color=orange]v4.06[/color], 08.01.2019[/b][list]
+[*]Fixed an error in ItemSocketing skin.
+[*]Added back my ShadowOverlay.
+[*]Adjust font size for ScrappingMachine & FlyoutButton iLvL.
+[*]Update the Minimap Glow appearance.
+[*]Update RealmInfo.
+[*]Simplify the NamePlate Auras.
+[*]Change the default position for the Combat State.[/list]
+
 [b][color=orange]v4.05[/color], 27.12.2018[/b][list]
 [*]Various skin adjustments & fixes.
 [*]Use a nice glow around RaidBuffReminder & Buff Reminder.
